[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems (https://github.com/scattered-systems)"]
categories = []
description = "acme"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wiki"
keywords = ["scsys"]
license = "Apache-2.0"
name = "acme-gateways"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.3"

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
async-trait = "0.1.59"
axum = { features =["headers", "http2", "macros", "ws"], version = "0.6.0" }
clap = { features = ["derive"], version = "4.0.29" }
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.23" }
lru = "0.8.1"
rust-s3 = {features = ["with-tokio"], version = "0.32.3" }
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
tokio = { features = ["full"], version = "1.22.0" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.4" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }
