[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "Procedural macros created to support Acme, an all-in-one blockchain toolkit"
edition = "2021"
keywords = ["blockchain", "toolkit"]
name = "acme-macros"
license = "MIT"
readme = "README.md"
repository = "https://github.com/FL03/acme/crates/macros"
version = "0.1.3"

[lib]
bench = false
proc-macro = true
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
