[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
description = "Procedural macros created to support Acme, an all-in-one blockchain toolkit"
edition = "2021"
keywords = ["blockchain", "proc-macros", "scsys"]
name = "acme-macros"
license = "MIT"
readme = "README.md"
repository = "https://github.com/FL03/acme"
version = "0.1.10" # TODO - Current Release v0.1.10

[lib]
bench = false
proc-macro = true
test = true

[features]
default = []


[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]

[dev-dependencies]
acme = { path = "../acme", version = "0.1.22" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]