[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "acme"
edition = "2021"
homepage = "https://github.com/FL03/acme/wiki"
keywords = ["scsys"]
license = "Apache-2.0"
name = "acme-net"
repository = "https://github.com/FL03/acme"
version = "0.2.5"

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
async-trait = "0.1.60"
axum = "0.6.1"
http = "0.2.8"
http-body = "0.4.5"
hyper = { features = ["full"], version = "0.14.23" }
mio = "0.8.4"
scsys = { features = ["full"], version = "0.1.40" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["macros", "signal"], version = "1.23.0" }
tower = "0.4.13"
tower-http = { features = [], version = "0.3.5" }
tracing = { features = [], version = "0.1.37" }
tracing-subscriber = { features = [], version = "0.3.16" }

[dev-dependencies]


[target.wasm32-unknown-unknown]
