[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "Designed around libp2p and tokio"
edition = "2021"
keywords = ["blockchain", "toolkit"]
name = "acme-network"
license = "MIT"
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
version = "0.1.10" # TODO - Current Release v0.1.9

[features]
default = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
hyper = { features = ["full"], version = "0.14.19" }
libp2p = { features = ["dns-tokio", "tcp-tokio"], version = "0.45.1" }
log = "0.4.17"
once_cell = "1.12.0"
pretty_env_logger = "0.4.0"
tokio = { features = ["full"], version = "1.19.2" }

[dev-dependencies]
acme = { path = "../acme", version = "0.1.22" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]