[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
description = "Acme was created to be an all-in-one blockchain toolkit in support of the Scattered-Systems ecosystem"
edition = "2021"
keywords = ["blockchain", "scsys", "toolkit"]
license = "MIT"
name = "acme"
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
version = "0.1.30" # TODO - Update cargo package version

[features]
chains = ["acme-chains"]
core = ["acme-core"]
data = ["acme-data"]
default = ["core"]
derive = ["acme-derive"]
full = ["default", "derive", "macros", "network"]
macros = ["acme-macros"]
network = ["acme-network"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
clap = { features = ["derive"], version = "3.2.5" }
config = "0.13.1"
glob = "0.3.0"
serde = { features = ["derive"], version = "1.0.137" }

[dependencies.acme-chains]
optional = true
path = "../chains"
version = ">=0.1.4"

[dependencies.acme-core]
optional = true
path = "../core"
version = ">=0.1.14"

[dependencies.acme-data]
optional = true
path = "../data"
version = ">=0.1.13"

[dependencies.acme-derive]
optional = true
path = "../derive"
version = ">=0.1.13"

[dependencies.acme-macros]
optional = true
path = "../macros"
version = ">=0.1.13"

[dependencies.acme-network]
optional = true
path = "../network"
version = ">=0.1.13"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]