[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
categories = []
description = "Acme was created to be an all-in-one blockchain toolkit in support of the Scattered-Systems ecosystem"
edition = "2021"
keywords = ["blockchain", "scsys", "toolkit"]
license = "MIT"
name = "acme"
publish = true
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
version = "0.1.36" # TODO - Update cargo package version

[features]
default = []
derive = ["acme-derive"]
full = ["default", "derive", "macros"]
macros = ["acme-macros"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "acme"
test = true

[dependencies]
async-trait = "0.1.56"
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
config = "0.13.1"
glob = "0.3.0"
reqwest = "0.11.11"
serde = { features = ["derive"], version = "1.0.138" }
serde_json = "1.0.82"

[dependencies.acme-derive]
optional = true
path = "../derive"
version = ">=0.1.36"

[dependencies.acme-macros]
optional = true
path = "../macros"
version = ">=0.1.36"